# cobot_s

./: README.md  cobot.rules
cobot_rm/: .setup_assistant  CMakeLists.txt  package.xml
cobot_rm/config/: cobot_description.srdf  fake_controllers.yaml  gazebo_cobot_description.urdf  joint_limits.yaml  ompl_planning.yaml  stomp_planning.yaml
cobot_rm/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
cobot_s_moveit_sim/: .setup_assistant  CMakeLists.txt  package.xml
cobot_s_moveit_sim/config/: cobot_description.srdf  gazebo_cobot_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml
cobot_s_moveit_sim/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  (+3 more)
msg/agx_pick_msg/: CMakeLists.txt  package.xml
msg/agx_pick_msg/scripts/: t.py
msg/agx_pick_msg/srv/: AgxPickSrv.srv  OrderSrv.srv  PickStateSrv.srv  TaskCmd.srv
(+81 files in other folders)
